--- a/web/src/index.css
+++ b/web/src/index.css
@@ -2,7 +2,7 @@
   height: 800px;
 }
 
-.sidebar {
+/* .sidebar {
   background-color: rgba(35, 55, 75, 0.9);
   color: #fff;
   padding: 6px 12px;
@@ -13,4 +13,4 @@
   left: 0;
   margin: 12px;
   border-radius: 4px;
-}
+} */
